tests/neg-custom-args/captures/filevar.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/filevar.scala:15:12 --------------------------------------
15 |  withFile: f =>       // error with level checking, was OK under both schemes before
   |            ^
   |Found:    (f: File^'s1) ->'s2 Unit
   |Required: (f: File^{l}) => Unit
   |
   |Note that capability l is not included in capture set {cap}.
   |
   |where:    =>  refers to a fresh root capability created in anonymous function of type (using l²: scala.caps.Capability): File^{l²} -> Unit when instantiating expected result type (f: File^{l²}) ->{cap²} Unit of function literal
   |          cap is a fresh root capability in the type of variable file
16 |    val o = Service()
17 |    o.file = f
18 |    o.log
   |
   | longer explanation available when compiling with `-explain`
